--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,5 @@
-baseURL = "https://www.adrianmoreno.info"
-languageCode = "en-us"
+baseURL = "https://john.seedganggames.com"
+languageCode = "en-uk"
 theme = "custom"
 
 # Plugins
